bug: snippet preview text not showing up:
*overflow: hidden messed up the display of the snippet preview text in the snippet list. I guess the <p> tag holding snippet.text counted as overflow.
- just had to change overflow: visible to override.

--- a/sass/_Single-Snippet.scss
+++ b/sass/_Single-Snippet.scss
@@ -22,6 +22,7 @@
     line-height: 0;
     font-size: 10px;
     color: #7B7E82;
+    overflow: visible;
   }
 
 }
